Nginx working, still no https

--- a/server/nginx/Dockerfile
+++ b/server/nginx/Dockerfile
@@ -2,5 +2,4 @@ FROM nginx:1.23.0-alpine
 
 WORKDIR /etc/nginx
 
-COPY nginx.conf nginx.key nginx-certificate.crt ./
-COPY dionysus.key dionysus.crt ./
+COPY nginx.conf ./
