--- a/server/elk/filebeat/Dockerfile
+++ b/server/elk/filebeat/Dockerfile
@@ -1,5 +1,7 @@
-FROM docker.elastic.co/elasticsearch/filebeat:8.3.2
+ARG ELK_VERSION
+
+FROM docker.elastic.co/beats/filebeat:8.3.2
 
 WORKDIR /usr/share/filebeat
 
-COPY . ./ 
+COPY filebeat.yml ./ 
