--- a/server/elk/kibana/kibana.yml
+++ b/server/elk/kibana/kibana.yml
@@ -4,9 +4,30 @@
 #
 server.name: kibana
 server.host: 0.0.0.0
-elasticsearch.hosts: [ "http://elasticsearch:9200" ]
+
+# Elasticsearch Connection
+elasticsearch.hosts: [ "${ELASTICSEARCH_HOST_PORT}" ]
 monitoring.ui.container.elasticsearch.enabled: true
 
+# SSL settings
+server.ssl.enabled: false
+# server.ssl.certificate: /certs/kibana.crt
+# server.ssl.key: /certs/kibana.key
+# server.ssl.certificateAuthorities: [ "/certs/ca.crt" ]
+# xpack.security.encryptionKey: C1tHnfrlfxSPxPlQ8BlgPB5qMNRtg5V5
+# xpack.encryptedSavedObjects.encryptionKey: D12GTfrlfxSPxPlGRBlgPB5qM5GOPDV5
+# xpack.reporting.encryptionKey: RSCueeHKzrqzOVTJhkjt17EMnzM96LlN
+
 ## X-Pack security credentials
-elasticsearch.username: elastic
-elasticsearch.password: changeme
+elasticsearch.serviceAccountToken: "${KIBANA_SERVICE_ACCOUNT_TOKEN}"
+# elasticsearch.ssl.certificateAuthorities: [ "/certs/ca.crt" ]
+
+
+## Misc
+elasticsearch.requestTimeout: 90000
+
+
+
+## ElastAlert Plugin
+#elastalert-kibana-plugin.serverHost: elastalert
+#elastalert-kibana-plugin.serverPort: 3030
