--- a/server/elk/logstash/pipeline/main.conf
+++ b/server/elk/logstash/pipeline/main.conf
@@ -15,7 +15,7 @@ filter {
 
 output {
 	elasticsearch {
-		hosts => "elasticsearch_zues:9200"
+		hosts => "http://elasticsearch_zues:9200"
 		user => "logstash_internal"
 		password => "changeme"
         # ssl => true
