--- a/scrapper/package.json
+++ b/scrapper/package.json
@@ -3,23 +3,24 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "dev": "pnpm cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only --exit-child src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "dev": "pnpm cross-env ts-node-dev --respawn --transpile-only --exit-child src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
-    "got": "^12.1.0",
+    "got": "^11.8.3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.7",
+    "zod": "^3.17.9"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.31",
@@ -27,6 +28,7 @@
     "@types/jest": "^28.1.6",
     "@types/node": "^18.0.6",
     "jest": "^28.1.3",
+    "prettier": "^2.7.1",
     "ts-jest": "^28.0.7",
     "ts-node-dev": "^2.0.0",
     "tsc": "^2.0.4",
