--- a/server/nginx/nginx.conf
+++ b/server/nginx/nginx.conf
@@ -9,35 +9,35 @@ events {
 
 http {
 
-  server {
-    listen 80;
-    server_name api;
+  # server {
+  #   listen 80;
+  #   server_name api;
+  #
+  #   location / {
+  #     proxy_pass http://api:5000;
+  #     proxy_set_header    X-Forwarded-For $remote_addr;
+  #   }
+  # }
 
-    location / {
-      proxy_pass http://api:5000;
-      proxy_set_header    X-Forwarded-For $remote_addr;
-    }
-  }
-        
-  server {
-    listen 3000;
-    server_name grafana;
+  # server {
+  #   listen 3000;
+  #   server_name grafana;
+  #
+  #   location / {
+  #     proxy_pass          http://grafana:3000;
+  #     proxy_set_header    Host $http_host;
+  #   }
+  # }
 
-    location / {
-      proxy_pass          http://grafana:3000;
-      proxy_set_header    Host $http_host;
-    }
-  }
-
-  server {
-    listen 3100;
-    server_name loki;
-
-    location / {
-      proxy_pass          http://loki:3100;
-      proxy_set_header    X-Forwarded-For $remote_addr;
-    }
-  }
+  # server {
+  #   listen 3100;
+  #   server_name loki;
+  #
+  #   location / {
+  #     proxy_pass          http://loki:3100;
+  #     proxy_set_header    X-Forwarded-For $remote_addr;
+  #   }
+  # }
 
   server {
     listen 5601;
