--- a/db-wrapper/package.json
+++ b/db-wrapper/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "swagger-typescript-api": "^9.3.1",
     "swagger-ui-express": "^4.4.0",
     "typeorm": "^0.3.7",
     "winston": "^3.8.1",
@@ -53,7 +54,6 @@
     "ts-jest": "^28.0.5",
     "ts-node": "10.7.0",
     "ts-node-dev": "^2.0.0",
-    "tsc": "^2.0.4",
     "typescript": "4.5.2"
   }
 }
