--- a/docker-compose-elastic.yaml
+++ b/docker-compose-elastic.yaml
@@ -2,21 +2,6 @@
 version: "3.8"
 
 volumes:
-  # RedisDB:
-  # Prometheus: {}
-  # PrometheusData: {}
-  # GrafanaData: {}
-  # GrafanaConfig: {}
-  # Caddy: {}
-  # AlertManager: {}
-  # Syslog: {}
-  # Loki: {}
-  # LokiData: {}
-  # Promtail: {}
-  # ConsulConfig: {}
-  # ConsulData: {}
-  # Vault: {}
-  Nginx: {}
   ElasticData: {}
   ElasticData1: {}
   ElasticData2: {}
@@ -27,72 +12,11 @@ volumes:
   Logstash: {}
 
 networks:
-  monitor-net:
+  dio:
     driver: bridge
 
 services:
-  ################################################ Api #######################################################
-  # api:
-  #   build:
-  #     context: ./backend
-  #     dockerfile: Dockerfile
-  #   container_name: api
-  #   expose:
-  #     - 5000
-  #     - 9229
-  #   networks:
-  #     monitor-net:
-  #   restart: unless-stopped
-  #   labels:
-  #     org.label-schema.group: "Api"
-  #
-  # redis:
-  #   image: redis:alpine
-  #   container_name: redis
-  #   expose:
-  #     - 6379
-  #   volumes:
-  #     - RedisDB:/data
-  #   networks:
-  #     monitor-net:
-  #   labels:
-  #     org.label-schema.group: "Api"
   ############################################## Search Engine ########################################################
-  elasticsearch_zues:
-    build:
-      context: ./server/elk/elasticsearch
-      dockerfile: Dockerfile
-      args:
-        ELK_VERSION: ${ELK_VERSION}
-    container_name: elasticsearch_zues
-    restart: unless-stopped
-    environment:
-      ELASTIC_USERNAME: ${ELASTIC_USERNAME}
-      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD}
-      ELASTIC_CLUSTER_NAME: ${ELASTIC_CLUSTER_NAME}
-      ELASTIC_NODE_NAME: ${ELASTIC_NODE_NAME}
-      ELASTIC_INIT_MASTER_NODE: ${ELASTIC_INIT_MASTER_NODE}
-      ELASTIC_DISCOVERY_SEEDS: ${ELASTIC_DISCOVERY_SEEDS}
-      ES_JAVA_OPTS: "-Xmx${ELASTICSEARCH_HEAP} -Xms${ELASTICSEARCH_HEAP} -Des.enforce.bootstrap.checks=true -Dlog4j2.formatMsgNoLookups=true"
-      bootstrap.memory_lock: "true"
-    volumes:
-      - ElasticData:/usr/share/elasticsearch/data
-      - ElasticConfig:/usr/share/elasticsearch/config
-    ports:
-      - "9200:9200"
-      - "9300:9300"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 200000
-        hard: 200000
-    networks:
-      - monitor-net
-    # healthcheck:
-    #   test: ["CMD", "sh", "-c", "curl -sf --insecure https://$ELASTIC_USERNAME:$ELASTIC_PASSWORD@localhost:9200/_cat/health | grep -ioE 'green|yellow' || echo 'not green/yellow cluster status'"]
-
   elasticsearch_poseidon:
     build:
       context: ./server/elk/elasticsearch
@@ -121,7 +45,7 @@ services:
         soft: 200000
         hard: 200000
     networks:
-      - monitor-net
+      - dio
     # healthcheck:
     #   test: ["CMD", "sh", "-c", "curl -sf --insecure https://$ELASTIC_USERNAME:$ELASTIC_PASSWORD@localhost:9200/_cat/health | grep -ioE 'green|yellow' || echo 'not green/yellow cluster status'"]
 
@@ -153,7 +77,7 @@ services:
         soft: 200000
         hard: 200000
     networks:
-      - monitor-net
+      - dio
     # healthcheck:
     #   test: ["CMD", "sh", "-c", "curl -sf --insecure https://$ELASTIC_USERNAME:$ELASTIC_PASSWORD@localhost:9200/_cat/health | grep -ioE 'green|yellow' || echo 'not green/yellow cluster status'"]
 
@@ -175,27 +99,9 @@ services:
       - "5044:5044"
       - "9600:9600"
     networks:
-      - monitor-net
+      - dio
     # healthcheck:
     #   test: ["CMD", "sh", "-c", "curl -sf --insecure https://$ELASTIC_USERNAME:$ELASTIC_PASSWORD@localhost:9200/_cat/health | grep -ioE 'green|yellow' || echo 'not green/yellow cluster status'"]
-
-  kibana:
-    build:
-      context: ./server/elk/kibana
-      args:
-        ELK_VERSION: $ELK_VERSION
-    container_name: kibana
-    restart: unless-stopped
-    volumes:
-      - Kibana:/usr/share/kibana
-    environment:
-      ELASTIC_USERNAME: ${ELASTIC_USERNAME}
-      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD}
-      ELASTICSEARCH_HOST_PORT: https://${ELASTICSEARCH_HOST}:${ELASTICSEARCH_PORT}
-    ports:
-      - "5601:5601"
-    networks:
-      - monitor-net
 
   filebeat:
     build:
@@ -219,7 +125,7 @@ services:
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro⏎
     networks:
-      - monitor-net
+      - dio
 
   rubban:
     image: sherifabdlnaby/rubban:latest
@@ -260,273 +166,5 @@ services:
       - "9304:9304"
     command: ["-logstash.host", "logstash"]
     networks:
-      - monitor-net
-
-  ############################################ Monitoring #######################################################
-  ### v2.36.2
-  # prometheus:
-  #   build:
-  #     context: ./server/monitoring/prometheus
-  #     dockerfile: Dockerfile
-  #   container_name: prometheus
-  #   expose:
-  #     - 9090
-  #   networks:
-  #     - monitor-net
-  #   volumes:
-  #     - Prometheus:/etc/prometheus
-  #     - PrometheusData:/prometheus
-  #   command:
-  #     - "--config.file=/etc/prometheus/prometheus.yml"
-  #     - "--storage.tsdb.path=/prometheus"
-  #     - "--web.console.libraries=/etc/prometheus/console_libraries"
-  #     - "--web.console.templates=/etc/prometheus/consoles"
-  #     - "--storage.tsdb.retention.time=200h"
-  #     - "--web.enable-lifecycle"
-  #   restart: unless-stopped
-  #   labels:
-  #     org.label-schema.group: "monitoring"
-  #
-  # ### v0.24.0
-  # alertmanager:
-  #   build:
-  #     context: ./server/monitoring/alertmanager
-  #     dockerfile: Dockerfile
-  #   container_name: alertmanager
-  #   volumes:
-  #     - AlertManager:/etc/alertmanager
-  #   command:
-  #     - "--config.file=/etc/alertmanager/config.yml"
-  #     - "--storage.path=/alertmanager"
-  #   restart: unless-stopped
-  #   expose:
-  #     - 9093
-  #   networks:
-  #     - monitor-net
-  #   labels:
-  #     org.label-schema.group: "monitoring"
-  #
-  # ### v0.44.0
-  # cadvisor:
-  #   image: gcr.io/cadvisor/cadvisor:v0.44.0
-  #   container_name: cadvisor
-  #   privileged: true
-  #   devices:
-  #     - /dev/kmsg:/dev/kmsg
-  #   volumes:
-  #     - /:/rootfs:ro
-  #     - /var/run:/var/run:ro
-  #     - /sys:/sys:ro
-  #     - /var/lib/docker:/var/lib/docker:ro
-  #   restart: unless-stopped
-  #   expose:
-  #     - 8080
-  #   networks:
-  #     - monitor-net
-  #   labels:
-  #     org.label-schema.group: "monitoring"
-  #
-  # ### v1.4.3
-  # pushgateway:
-  #   image: prom/pushgateway:v1.4.3
-  #   container_name: pushgateway
-  #   restart: unless-stopped
-  #   expose:
-  #     - 9091
-  #   networks:
-  #     - monitor-net
-  #   labels:
-  #     org.label-schema.group: "monitoring"
-  #
-  # ### v1.3.1
-  # nodeexporter:
-  #   image: prom/node-exporter:v1.3.1
-  #   container_name: nodeexporter
-  #   user: root
-  #   privileged: true
-  #   volumes:
-  #     - /proc:/host/proc:ro
-  #     - /sys:/host/sys:ro
-  #     - /:/rootfs:ro
-  #   command:
-  #     - "--path.procfs=/host/proc"
-  #     - "--path.rootfs=/rootfs"
-  #     - "--path.sysfs=/host/sys"
-  #     - "--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)"
-  #   restart: unless-stopped
-  #   expose:
-  #     - 9100
-  #   networks:
-  #     - monitor-net
-  #   labels:
-  #     org.label-schema.group: "monitoring"
-  #
-  # ### 0.10
-  # nginxexporter:
-  #   image: nginx/nginx-prometheus-exporter:0.10
-  #   container_name: nginx-exporter
-  #   expose:
-  #     - 9113
-  #   command:
-  #     - -nginx.scrape-uri
-  #     - http://nginx:8081/stub_status
-  #   restart: unless-stopped
-  #   networks:
-  #     - monitor-net
-  #   labels:
-  #     org.label-schema.group: "monitoring"
-
-  ################################################## Logging ######################################################
-  ### v2.5.0
-  # loki:
-  #   build:
-  #     context: ./server/monitoring/loki
-  #     dockerfile: Dockerfile
-  #   container_name: loki
-  #   privileged: true
-  #   user: root
-  #   volumes:
-  #     - Loki:/etc/loki
-  #     - LokiData:/tmp/loki
-  #   command: -config.file=/etc/loki/loki-config.yml
-  #   restart: always
-  #   expose:
-  #     - 3100
-  #   networks:
-  #     monitor-net:
-  #   labels:
-  #     org.label-schema.group: "logging"
-  #
-  # ### v2.5.0
-  # promtail:
-  #   build:
-  #     context: ./server/monitoring/promtail
-  #     dockerfile: Dockerfile
-  #   user: root
-  #   privileged: true
-  #   container_name: promtail
-  #   command: -config.file=/etc/promtail/promtail-config.yml
-  #   volumes:
-  #     - Promtail:/etc/promtail
-  #     - /var/log:/var/log
-  #     - /var/lib/docker/containers:/var/lib/docker/containers
-  #   expose:
-  #     - 9080
-  #     - 1514
-  #   networks:
-  #     monitor-net:
-  #   restart: unless-stopped
-  #   labels:
-  #     org.label-schema.group: "logging"
-  #
-  # # v3.30.1
-  # syslog-ng:
-  #   build:
-  #     context: ./server/monitoring/syslog
-  #     dockerfile: Dockerfile
-  #   container_name: syslog-ng
-  #   user: root
-  #   privileged: true
-  #   volumes:
-  #     - Syslog:/etc/syslog-ng
-  #     - /var/log:/var/log
-  #   networks:
-  #     monitor-net:
-  #   ports:
-  #     - protocol: udp
-  #       published: 514
-  #       target: 514
-  #     - protocol: tcp
-  #       published: 601
-  #       target: 601
-  #   restart: always
-  #   labels:
-  #     org.label-schema.group: "logging"
-
-  ############################################## Visualization ###################################################
-  ### v9.0.2
-  # grafana:
-  #   build:
-  #     context: ./server/monitoring/grafana
-  #     dockerfile: Dockerfile
-  #   container_name: grafana
-  #   volumes:
-  #     - GrafanaData:/var/lib/grafana
-  #     - GrafanaConfig:/etc/grafana
-  #   environment:
-  #     - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
-  #     - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
-  #     - GF_USERS_ALLOW_SIGN_UP=false
-  #   restart: unless-stopped
-  #   expose:
-  #     - 3000
-  #   networks:
-  #     - monitor-net
-  #   labels:
-  #     org.label-schema.group: "Visualization"
-
-  ################################################# System ########################################################
-  ### v1.23.0-alpine
-  nginx:
-    build:
-      context: ./server/nginx
-      dockerfile: Dockerfile
-    container_name: nginx
-    ports:
-      - "4000:80"
-      - "3000:3000"
-      - "3100:3100"
-      - "5000:5000"
-      - "8081:8081"
-
-    volumes:
-      - Nginx:/etc/nginx
-    networks:
-      - monitor-net
-    restart: unless-stopped
-    labels:
-      org.label-schema.group: "System"
-# ### v1.5.0
-#   vault:
-#     build:
-#       context: ./server/secrets/vault
-#       dockerfile: Dockerfile
-#     container_name: vault
-#     ports:
-#       - 8200:8200
-#     volumes:
-#       - Vault:/vault
-#     environment:
-#       - VAULT_ADDR=http://127.0.0.1:8200
-#     command: server
-#     cap_add:
-#       - IPC_LOCK
-#     depends_on:
-#       - consul
-#     networks:
-#       - monitor-net
-#     labels:
-#       org.label-schema.group: "System"
-
-# ### v1.8.2
-#   consul:
-#     build:
-#       context: ./server/secrets/consul
-#       dockerfile: Dockerfile
-#     container_name: consul
-#     ports:
-#       - 8500:8500
-#     environment:
-#       - CONSUL_BIND_INTERFACE=eth0
-#       - CONSUL_CLIENT_INTERFACE=eth0
-#       - CONSUL_ALLOW_PRIVILEGED_PORTS=
-#     command: agent -server -bootstrap-expect 1
-#     volumes:
-#       - ConsulConfig:/consul/config
-#       - ConsulData:/consul/data
-#     networks:
-#       - monitor-net
-#     labels:
-#       org.label-schema.group: "System"
-
+      - dio
 ################################################################################################################
