--- a/server/nginx/nginx.conf
+++ b/server/nginx/nginx.conf
@@ -30,11 +30,11 @@ http {
  }
 
  server {
-   listen 5000;
-   server_name api;
+   listen 4000;
+   server_name backend;
 
    location / {
-     proxy_pass http://api:5000;
+     proxy_pass http://backend:4000;
      proxy_set_header    X-Forwarded-For $remote_addr;
    }
  }
