--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "dionysus",
+  "name": "frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "ky": "^0.30.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-google-login": "^5.2.2",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@types/react-slick": "^0.23.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5"
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "vite": "^2.9.5"
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.0.0",
+    "prettier": "^2.7.1",
+    "sass": "^1.54.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.0.0"
   }
 }
