--- a/engine/package.json
+++ b/engine/package.json
@@ -17,11 +17,13 @@
     "test": "jest --watchAll --coverage --verbose"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^3.19.0",
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
     "got": "^12.1.0",
     "morgan": "^1.10.0",
+    "seedrandom": "^3.0.5",
     "swagger-ui-express": "^4.5.0",
     "winston": "^3.8.1",
     "winston-loki": "^6.0.5",
