--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,14 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@types/react-slick": "^0.23.10",
+    "formik": "^2.2.9",
     "framer-motion": "^7.0.0",
+    "ky": "^0.31.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
