--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.2.1",
     "@prisma/client": "^4.2.1",
-    "@types/cheerio": "^0.22.31",
-    "cheerio": "1.0.0-rc.12",
+    "amqplib": "^0.10.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
