--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,19 +17,19 @@ networks:
 
 services:
   ################################################ Api #######################################################
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    container_name: backend
-    expose:
-      - 4000
-      - 9229
-    networks:
-      dio:
-    restart: unless-stopped
-    labels:
-      org.label-schema.group: "Backend"
+#  backend:
+#    build:
+#      context: ./backend
+#      dockerfile: Dockerfile
+#    container_name: backend
+#    expose:
+#      - 4000
+#      - 9229
+#    networks:
+#      dio:
+#    restart: unless-stopped
+#    labels:
+#      org.label-schema.group: "Backend"
 
   apollo:
     build:
