--- a/backend/package.json
+++ b/backend/package.json
@@ -30,12 +30,15 @@
     "@nestjs/platform-express": "^9.0.11",
     "@nestjs/swagger": "^6.1.0",
     "@prisma/client": "^4.3.0",
+    "@types/cheerio": "^0.22.31",
     "amqp-connection-manager": "^4.1.6",
     "amqplib": "^0.10.2",
+    "cheerio": "1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "got": "^12.3.1",
     "joi": "^17.6.0",
     "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
