--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -204,10 +204,10 @@ services:
 
   rabbitmq:
     image: rabbitmq:3.9.22-management-alpine
-    container_name: 'rabbitmq'
+    container_name: rabbitmq
     ports:
-      - 5673:5672
-      - 15673:15672
+      - 5672:5672
+      - 15672:15672
     volumes:
       - RabbitmqLib:/var/lib/rabbitmq/
       - RabbitmqLog:/var/log/rabbitmq
