--- a/backend/package.json
+++ b/backend/package.json
@@ -21,16 +21,17 @@
     "test:e2e": "jest --config ./apps/hercules/test/jest-e2e.json"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.4.0",
     "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.11",
+    "@nestjs/elasticsearch": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/microservices": "^9.0.11",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.11",
     "@nestjs/swagger": "^6.1.0",
     "@prisma/client": "^4.3.0",
-    "@types/cheerio": "^0.22.31",
     "amqp-connection-manager": "^4.1.6",
     "amqplib": "^0.10.2",
     "cheerio": "1.0.0-rc.12",
@@ -38,11 +39,13 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
-    "got": "^12.3.1",
+    "got": "^11.8.3",
+    "html-to-text": "^8.2.1",
     "joi": "^17.6.0",
     "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "pug": "^3.0.2",
     "redis": "^4.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -55,13 +58,16 @@
     "@nestjs/cli": "^9.1.1",
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/testing": "^9.0.11",
+    "@types/cheerio": "^0.22.31",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
+    "@types/html-to-text": "^8.1.1",
     "@types/jest": "28.1.4",
     "@types/node": "^16.11.56",
     "@types/nodemailer": "^6.4.5",
     "@types/passport": "^1.0.10",
     "@types/passport-jwt": "^3.0.6",
+    "@types/pug": "^2.0.6",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
