--- a/backend/apps/hercules/tsconfig.app.json
+++ b/backend/apps/hercules/tsconfig.app.json
@@ -6,7 +6,8 @@
   },
   "include": [
     "src/**/*",
-    "prisma/**/*"
+    "prisma/**/*",
+    "src/views/*"
   ],
   "exclude": [
     "node_modules",
