--- a/backend/apps/apollo/Dockerfile
+++ b/backend/apps/apollo/Dockerfile
@@ -14,7 +14,7 @@ RUN ["pnpm", "install"]
 
 COPY [".", "."]
 
-RUN ["pnpm","run","build"]
+#RUN ["pnpm","run","build"]
 
 #####################################################################################################################
 FROM node:alpine AS production
