--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,19 +19,19 @@ services:
   ################################################ Hercules #######################################################
   hercules:
     build:
-      context: ./backend
+      context: ./dio
       dockerfile: ./apps/hercules/Dockerfile
       target: development
     command:
       [
         'sh',
         '-c',
-        'pnpm prisma generate --schema="./apps/hercules/prisma/schema.prisma" && pnpm prisma migrate dev --schema="./apps/hercules/prisma/schema.prisma" && pnpm run start:dev hercules',
+        'pnpm prisma generate --schema="./apps/hercules/prisma/schema.prisma" && pnpm prisma migrate dev --schema="./apps/hercules/prisma/schema.prisma" && pnpm start hercules',
       ]
     env_file: ./backend/apps/hercules/.env
     container_name: hercules
     volumes:
-      - ./backend:/usr/share/app
+      - ./dio:/usr/share/app
       - /usr/share/app/node_modules
     ports:
       - '4000:4000'
@@ -41,6 +41,8 @@ services:
     restart: unless-stopped
     labels:
       org.label-schema.group: 'Backend'
+    depends_on:
+      - rabbitmq
 
   hercules-db:
     image: postgres:14-alpine
@@ -76,7 +78,7 @@ services:
       [
         'sh',
         '-c',
-        'pnpm prisma generate --schema="./apps/apollo/prisma/schema.prisma" && pnpm prisma migrate dev --schema="./apps/apollo/prisma/schema.prisma" && pnpm run start:dev apollo',
+        'pnpm prisma generate --schema="./apps/apollo/prisma/schema.prisma" && pnpm prisma migrate dev --schema="./apps/apollo/prisma/schema.prisma" && pnpm run start apollo',
       ]
     env_file: ./backend/apps/apollo/.env
     container_name: apollo
@@ -88,7 +90,7 @@ services:
     labels:
       org.label-schema.group: 'Apollo'
     volumes:
-      - ./backend:/usr/share/app
+      - ./backend/apps/apollo:/usr/share/app/apps/apollo
       - /usr/share/app/node_modules
     depends_on:
       - apollo-db
@@ -105,30 +107,25 @@ services:
       POSTGRES_PASSWORD: 7142
       POSTGRES_DB: apollo
 
-  #  scraper:
-  #    build:
-  #      context: ./scrapper
-  #      dockerfile: Dockerfile
-  #    container_name: scraper
-  #    expose:
-  #      - 4001
-  #    networks:
-  #      dio:
-  #    restart: unless-stopped
-  #    labels:
-  #      org.label-schema.group: "Scraper"
-
   ################################################ Coeus #######################################################
   coeus:
     build:
-      context: ./backend/coeus
-      dockerfile: Dockerfile
+      context: ./backend
+      dockerfile: ./apps/coeus/Dockerfile
+      target: development
+    command: ['sh', '-c', 'pnpm run start:dev coeus']
+    env_file: ./backend/apps/hesita/.env
     container_name: coeus
-    expose:
-      - 4002
+    ports:
+      - '4002:4002'
+    networks:
+      - dio
     restart: unless-stopped
     labels:
       org.label-schema.group: 'Coeus'
+    volumes:
+      - ./backend/apps/coeus:/usr/share/app/apps/coeus
+      - /usr/share/app/node_modules
 
   ############################################## Athena ########################################################
   athena:
@@ -144,41 +141,85 @@ services:
     labels:
       org.label-schema.group: 'Athena'
 
+  ############################################## Hesita ########################################################
+  hesita:
+    build:
+      context: ./backend
+      dockerfile: ./apps/hesita/Dockerfile
+      target: development
+    command: ['sh', '-c', 'pnpm run start:dev hesita']
+    env_file: ./backend/apps/hesita/.env
+    container_name: hesita
+    ports:
+      - '4004:4004'
+    networks:
+      - dio
+    restart: unless-stopped
+    labels:
+      org.label-schema.group: 'Hesita'
+    volumes:
+      - ./backend/apps/hesita:/usr/share/app/apps/hesita
+      - /usr/share/app/node_modules
+
   ############################################## Elastic ########################################################
-  #  elasticsearch_zues:
-  #    build:
-  #      context: ./server/elk/elasticsearch
-  #      dockerfile: Dockerfile
-  #      args:
-  #        ELK_VERSION: ${ELK_VERSION}
-  #    container_name: elasticsearch_zues
-  #    restart: unless-stopped
-  #    environment:
-  #      ELASTIC_USERNAME: ${ELASTIC_USERNAME}
-  #      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD}
-  #      ELASTIC_CLUSTER_NAME: ${ELASTIC_CLUSTER_NAME}
-  #      ELASTIC_NODE_NAME: ${ELASTIC_NODE_NAME}
-  #      ELASTIC_INIT_MASTER_NODE: ${ELASTIC_INIT_MASTER_NODE}
-  #      ELASTIC_DISCOVERY_SEEDS: ${ELASTIC_DISCOVERY_SEEDS}
-  #      ES_JAVA_OPTS: "-Xmx${ELASTICSEARCH_HEAP} -Xms${ELASTICSEARCH_HEAP} -Des.enforce.bootstrap.checks=true -Dlog4j2.formatMsgNoLookups=true"
-  #      bootstrap.memory_lock: "true"
-  #    volumes:
-  #      - ElasticData:/usr/share/elasticsearch/data
-  #      - ElasticConfig:/usr/share/elasticsearch/config
-  #    ports:
-  #      - "9200:9200"
-  #      - "9300:9300"
-  #    ulimits:
-  #      memlock:
-  #        soft: -1
-  #        hard: -1
-  #      nofile:
-  #        soft: 200000
-  #        hard: 200000
-  #    networks:
-  #      - dio
-  # healthcheck:
-  #   test: ["CMD", "sh", "-c", "curl -sf --insecure https://$ELASTIC_USERNAME:$ELASTIC_PASSWORD@localhost:9200/_cat/health | grep -ioE 'green|yellow' || echo 'not green/yellow cluster status'"]
+  zues:
+    build:
+      context: ./server/elk/elasticsearch
+      dockerfile: Dockerfile
+      args:
+        ELK_VERSION: ${ELK_VERSION}
+    container_name: zues
+    restart: unless-stopped
+    environment:
+      ELASTIC_USERNAME: ${ELASTIC_USERNAME}
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD}
+      ELASTIC_CLUSTER_NAME: ${ELASTIC_CLUSTER_NAME}
+      ELASTIC_NODE_NAME: ${ELASTIC_NODE_NAME}
+      ELASTIC_INIT_MASTER_NODE: ${ELASTIC_INIT_MASTER_NODE}
+      ELASTIC_DISCOVERY_SEEDS: ${ELASTIC_DISCOVERY_SEEDS}
+      ES_JAVA_OPTS: '-Xmx${ELASTICSEARCH_HEAP} -Xms${ELASTICSEARCH_HEAP} -Des.enforce.bootstrap.checks=true -Dlog4j2.formatMsgNoLookups=true'
+      bootstrap.memory_lock: 'true'
+    volumes:
+      - ElasticData:/usr/share/elasticsearch/data
+      - ElasticConfig:/usr/share/elasticsearch/config
+    ports:
+      - '9200:9200'
+      - '9300:9300'
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 51200
+        hard: 51200
+    networks:
+      - dio
+    # healthcheck:
+    #   test:
+    #     [
+    #       'CMD',
+    #       'sh',
+    #       '-c',
+    #       "curl -sf --insecure https://$ELASTIC_USERNAME:$ELASTIC_PASSWORD@localhost:9200/_cat/health | grep -ioE 'green|yellow' || echo 'not green/yellow cluster status'",
+    #     ]
+    #
+  kibana:
+    build:
+      context: ./server/elk/kibana
+      args:
+        ELK_VERSION: $ELK_VERSION
+    container_name: kibana
+    restart: unless-stopped
+    volumes:
+      - Kibana:/usr/share/kibana
+    environment:
+      ELASTIC_USERNAME: ${ELASTIC_USERNAME}
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD}
+      ELASTICSEARCH_HOST_PORT: https://${ELASTICSEARCH_HOST}:${ELASTICSEARCH_PORT}
+    ports:
+      - '5601:5601'
+    networks:
+      - dio
 
   ################################################# System ########################################################
   ### v1.23.0-alpine
