--- a/dio/package.json
+++ b/dio/package.json
@@ -27,9 +27,12 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "fast-safe-stringify": "^2.1.1",
     "got": "^11.8.3",
     "html-to-text": "^8.2.1",
     "joi": "^17.6.0",
+    "logform": "^2.4.2",
+    "nest-winston": "^1.7.0",
     "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
